remove update and put from api spec
